prova analisi totale gruppi analisi

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -764,20 +764,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c1ec5deb",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_list = [\n",
     "    {\"gdf\":  gpd.read_file(PATH_BIBLIOTECHE_CLEAN),\n",
-    "     \"tipo\": \"Biblioteche\",\n",
+    "     \"tipo\": \"biblioteche\",\n",
     "     \"attr\": {\"priorita\": 1}},\n",
     "     {\"gdf\":  gpd.read_file(PATH_SCUOLE_CLEAN),\n",
-    "     \"tipo\": \"Scuole\",\n",
+    "     \"tipo\": \"scuole\",\n",
     "     \"attr\": {\"priorita\": 2}}\n",
     "     ]\n",
-    "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_ISTRUZIONE_CLEAN)"
+    "Graph_functions.auto_analysis_poi(gdf_list,\n",
+    "                                PATH_PICKLE=PATH_ISTRUZIONE_PICKLE_STAGING,\n",
+    "                                PATH_GEOJSON=PATH_ISTRUZIONE_CLEAN)"
    ]
   },
   {
@@ -824,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "c13a5e7c",
    "metadata": {},
    "outputs": [],
@@ -845,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "46c631ab",
    "metadata": {},
    "outputs": [],
@@ -1127,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "bf55f379",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "8b29667c",
    "metadata": {},
    "outputs": [],
@@ -1175,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "a711ad3a",
    "metadata": {},
    "outputs": [],
@@ -1192,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "066cb2ef",
    "metadata": {},
    "outputs": [],
@@ -1213,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "67bf17f1",
    "metadata": {},
    "outputs": [],
@@ -1487,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "c6b788aa",
    "metadata": {},
    "outputs": [],
@@ -1515,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "d96d1a97",
    "metadata": {},
    "outputs": [],
@@ -1532,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "137305c8",
    "metadata": {},
    "outputs": [],
@@ -1549,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "9fe527ca",
    "metadata": {},
    "outputs": [],
@@ -1570,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "fa24646a",
    "metadata": {},
    "outputs": [],
@@ -1953,7 +1955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
