aggiunto progetto tableau

--- a/Scripts/Visualization.ipynb
+++ b/Scripts/Visualization.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 127,
    "id": "65970b53",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 128,
    "id": "e413019a",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 129,
    "id": "6af6da6e",
    "metadata": {},
    "outputs": [],
@@ -91,25 +91,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc156ff6",
-   "metadata": {},
-   "source": [
-    "Unione dei gruppi di analisi già uniti nelle loro 3 versioni: Completo, Incidenti e Inquinamento, in un unico geodataframe.\n",
-    "\n",
-    "Struttura esempio:\n",
-    "\n",
-    "```python\n",
-    "{\n",
-    "    \"Gruppo\": \"Sanità\",\n",
-    "    \"Origine\": \"solo_incidenti\",\n",
-    "    \"Tipo\": \"Ospedali\",\n",
-    "    \"geometry\": Point()\n",
-    "}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6500b751",
    "metadata": {},
    "source": [
@@ -118,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 131,
    "id": "2bb0676d",
    "metadata": {},
    "outputs": [],
@@ -139,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 132,
    "id": "b176dd2d",
    "metadata": {},
    "outputs": [],
@@ -160,16 +141,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "eb45385f",
+   "execution_count": 133,
+   "id": "79cfb082",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_concat = gpd.pd.concat([gdf_poi_sport, gdf_poi_cultura, gdf_poi_istruzione, gdf_poi_sanita], ignore_index=True)\n",
-    "df_concat[\"MUNICIPIO\"] = df_concat[\"MUNICIPIO\"].astype(int)\n",
-    "\n",
-    "gdf_concat = gpd.GeoDataFrame(df_concat, crs=CRS_GRAD)\n",
-    "gdf_concat.to_file(PATH_POI_GRUPPI_ANALISI_UNITI_CLEAN, driver=\"GeoJSON\")"
+    "df_concat[\"MUNICIPIO\"] = df_concat[\"MUNICIPIO\"].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "49f28692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_pois_con_municipio = gpd.GeoDataFrame(df_concat, crs=CRS_GRAD)\n",
+    "gdf_pois_con_municipio.to_file(PATH_POI_GRUPPI_ANALISI_UNITI_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "9433c428",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['aree_gioco', 'parchi', 'impianti_sportivi', 'musei', 'cinema',\n",
+       "       'teatri', 'biblioteche', 'scuole', 'farmacie', 'ospedali'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_pois_con_municipio.tipo.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "99b0d71e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1191"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gdf_pois_con_municipio[gdf_pois_con_municipio[\"tipo\"] == \"aree_gioco\"])"
    ]
   }
  ],
